--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    -webkit-tap-highlight-color: transparent; /* for removing the highlight */
+
 }
 
 body{
